# sales-agent-lab

./: .env.example  .gitignore  README.md  RESEARCH_MEMO.md  pyproject.toml
src/sales_agent_lab/: __init__.py  cli.py  config.py
src/sales_agent_lab/agents/: drafter.py  scorecard.py
src/sales_agent_lab/clients/: kundenportal.py  llm.py  mailops.py
src/sales_agent_lab/knowledge/: __init__.py  discovery.py  scorecard.py
tests/: test_config.py
