[project]
name = "sales-agent-lab"
version = "0.1.0"
description = "Voice-first, human-in-the-loop AI sales agent lab for Tectara Systems / Webton Kundenportal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kenny", email = "kenny@tectara.io" }]
keywords = ["sales", "agent", "ai", "kundenportal", "mailops", "voice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
sales-agent = "sales_agent_lab.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
